# text-2-sql

./: .gitignore  Home.py  README.md  TEXT2SQL.md  docker-compose.yml  langgraph.json  pyproject.toml  temp.sql
extras/: E_COMMERCE.md  E_COMMERCE_NONINTUITIVE.md  QA.md
pages/: 01_Simple_Chat.py  02_Simple_Query_Generator.py  03_Simple_LangGraph.py  04_Simple_LangGraph_With_LLM.py  05_Simple_LangGraph_With_History.py  06_Simple_Database.py  07_SQL_Generator_Query_Executor.py  08_LangGraph_SQL_Generator_Query_Executor.py
text2sql/: __init__.py  components.py  db_utils.py  openai_utils.py  state.py
text2sql/graphs/: llm_graph_with_history.py  mock_graph.py  simple_llm_graph.py  sql_graph.py
